data/derived/comb/progs/unify/prog7454.ml.out
Characters 71-79:
  let fixpoint (f,b) = wwhile (( let f' (f,b) = ( (f b),(b = (f b)) ) in f' (f,b) ,b ));;
                                                                         ^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
